blueworld/static/blueworld/style.css
/* ... */
  .header h2 {
    text-transform: uppercase;
    display: inline-block;
    font-size: 3rem;
    margin-top: 0.5em; }
  .header nav .menu {
    background-color: #ccc; }

.page .main {
  width: 90%;
  margin-left: auto;
  margin-right: auto; }

h3.font-text {
  max-width: 30em; }

.current-choice,
.this_week {
  background: #EEE;
  padding: 1rem;
  margin-bottom: 1rem; }

.next_week {
  padding: 1rem; }

fieldset.collection-points label {
  font-size: 120%;
  font-weight: bold; }

fieldset.collection-points ul > li.column, fieldset.collection-points ul > li.columns,
fieldset.collection-points ul > li.column:last-child:not(:first-child),
fieldset.collection-points ul > li.columns:last-child:not(:first-child) {
  border: 1px solid #e6e6e6;
  margin: 0.2rem;
  float: left;
  list-style-type: none; }
  fieldset.collection-points ul > li.column p, fieldset.collection-points ul > li.columns p,
  fieldset.collection-points ul > li.column:last-child:not(:first-child) p,
  fieldset.collection-points ul > li.columns:last-child:not(:first-child) p {
    margin-bottom: 0rem; }

.signup ul.errorlist {
  background-color: #fce6e2;
  list-style-type: none;
  padding: 0.5rem;
  margin-left: 0; }

.this_week p,
.this_week h4{
  font-size: 1.5rem;
}

.this_week ul li {
  font-size: 1.5rem; }

.instructions {
  padding: 1rem;
  font-size: 1rem;
  max-width: 40rem;
  border-top: 1px solid #cacaca;
  background-color: #e6e6e6; }
  .instructions p {
    max-width: 40em; }

.callout {
  background-color: #e6e6e6; }

.callout li {
  list-style-type: none; }

.footer {
  width: 90%;
  margin-left: auto;
  margin-right: auto; }


div.skipped h5,
div.skipped li{
  color: #999;
}

.greeting{
  font-size:2em;
}

